--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "angular-starter-project",
   "version": "0.0.0",
   "scripts": {
+    "translate": "ng extract-i18n --output-path src/locale && xliffmerge",
+     "xliffmerge": "xliffmerge",
     "dev": "concurrently -k -n \"API,WEB\" -c \"bgBlue.bold,bgGreen.bold\" \"ts-node-dev -P tsconfig.server.json src/server/\" \"ng serve --proxy-config proxy.conf.json --open\"",
+    "start-de": "ng serve -o --configuration=development-de --port=4201",
+    "start-fr": "ng serve -o --configuration=development-fr --port=4202",
+    "start-it": "ng serve -o --configuration=development-it --port=4203",
     "ng": "ng",
     "start": "node dist/server/",
     "build": "ng build && tsc -p tsconfig.server.json",
@@ -43,6 +48,7 @@
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
+    "@angular/localize": "^13.3.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/jasmine": "~3.10.0",
@@ -58,11 +64,22 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ngx-i18nsupport": "^0.17.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "~4.5.2"
   },
   "browser": {
     "jsonwebtoken": false,
     "password-hash": false
+  },
+  "xliffmergeOptions": {
+    "srcDir": "src/locale",
+    "languages": [
+      "de",
+      "fr",
+      "it"
+    ],
+    "preserveOrder": true,
+    "beautifyOutput": true
   }
 }
