--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "password-hash": "^1.2.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.12",
-    "remult": "^0.19.3",
+    "remult": "^0.22.9-exp.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
