--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "angular-starter-project",
   "version": "0.0.0",
   "scripts": {
-    "dev": "concurrently -k -n \"API,WEB\" -c \"bgBlue.bold,bgGreen.bold\" \"ts-node-dev -P tsconfig.server.json src/server/\" \"ng serve --proxy-config proxy.conf.json --open\"",
+    "dev-web": "ng serve --proxy-config proxy.conf.json --open",
+    "dev-api": "ts-node-dev -P tsconfig.server.json src/server/",
+    "dev": "concurrently \"npm:dev-api\" \"npm:dev-web\" -k -n \"API,WEB\" -c \"bgBlue.bold,bgGreen.bold\" ",
     "ng": "ng",
     "start": "node dist/server/",
     "build": "ng build && tsc -p tsconfig.server.json",
