--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev-web": "ng serve --proxy-config proxy.conf.json --open",
-    "dev-api": "ts-node-dev -P tsconfig.server.json src/server/",
+    "dev-api": "tsx watch src/server/",
     "dev": "concurrently \"npm:dev-api\" \"npm:dev-web\" -k -n \"API,WEB\" -c \"bgBlue.bold,bgGreen.bold\" ",
     "ng": "ng",
     "start": "node dist/server/",
@@ -36,7 +36,6 @@
     "reflect-metadata": "^0.1.12",
     "remult": "^0.22.9-exp.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
@@ -62,6 +61,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^3.13.0",
     "typescript": "~4.8.4"
   },
   "browser": {
