--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
+    "@types/googlemaps": "^3.43.3",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "dotenv": "^8.1.0",
     "express": "^4.18.1",
+    "googlemaps": "^1.12.0",
     "helmet": "^5.1.1",
     "heroku-ssl-redirect": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
