--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
     "@types/googlemaps": "^3.43.3",
+    "@types/node-fetch": "^2.6.6",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "dotenv": "^8.1.0",
@@ -32,10 +33,11 @@
     "helmet": "^5.1.1",
     "heroku-ssl-redirect": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.7.0",
     "password-hash": "^1.2.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.12",
-    "remult": "^0.23.0-exp.1",
+    "remult": "^0.23.0-exp.34",
     "rxjs": "~7.5.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
@@ -67,6 +69,7 @@
   },
   "browser": {
     "jsonwebtoken": false,
-    "password-hash": false
+    "password-hash": false,
+    "node-fetch": false
   }
 }
