--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,12 +1,10 @@
 {
-   "extends": "./tsconfig.json",
-   "compilerOptions": {
-      "module": "commonjs",
-      "emitDecoratorMetadata": true,
-      "noEmit": false,
-      "outDir": "dist"
-   },
-   "include": [
-      "src/server/index.ts"
-   ]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "commonjs",
+    "emitDecoratorMetadata": true,
+    "noEmit": false,
+    "outDir": "dist"
+  },
+  "include": ["src/server/index.ts", "./src/app/common/UITools.ts"]
 }
