--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev-api": "tsx watch src/server/",
     "dev": "concurrently \"npm:dev-api\" \"npm:dev-web\" -k -n \"API,WEB\" -c \"bgBlue.bold,bgGreen.bold\" ",
     "ng": "ng",
-    "start": "node dist/server/",
+    "start": "tsx src/server/",
     "build": "ng build && tsc -p tsconfig.server.json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -40,6 +40,7 @@
     "remult": "^0.23.0-exp.34",
     "rxjs": "~7.5.0",
     "xlsx": "^0.18.5",
+    "tsx": "^3.13.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -64,7 +65,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^3.13.0",
     "typescript": "~4.8.4"
   },
   "browser": {
