--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "password-hash": "^1.2.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.12",
-    "remult": "^0.23.0-exp.34",
+    "remult": "^0.23.1",
     "rxjs": "~7.5.0",
-    "xlsx": "^0.18.5",
     "tsx": "^3.13.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
