--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./dist/out-tsc",
     "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
-    "strict": false, /*@#CHANGED@#*/
+    "strict": true, /*@#CHANGED@#*/
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
