--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "importHelpers": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2020",
@@ -31,8 +31,9 @@
       ],
       "common-ui-elements/interfaces": [
         "src/app/common-ui-elements/interfaces"
-      ],
-    }
+      ]
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
