after ng update @angular/core@17 @angular/cli@17

--- a/angular.json
+++ b/angular.json
@@ -101,10 +101,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angular-starter-project:build:production"
+              "buildTarget": "angular-starter-project:build:production"
             },
             "development": {
-              "browserTarget": "angular-starter-project:build:development"
+              "buildTarget": "angular-starter-project:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -112,7 +112,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-starter-project:build"
+            "buildTarget": "angular-starter-project:build"
           }
         },
         "test": {
