--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "noEmit": false,
     "outDir": "dist"
