updated starter kit

--- a/angular.json
+++ b/angular.json
@@ -65,6 +65,7 @@
           },
           "configurations": {
             "production": {
+              "aot": true,
               "budgets": [
                 {
                   "type": "initial",
